--- a/member.html
+++ b/member.html
@@ -44,6 +44,11 @@
         <img src="images/icon_wakaba.jpg" alt="わかば">
         <p> 新入生。Webデザイナーになるのが夢。 </p>
       </div>
+      <div class="col harf">
+        <h2>Credited Auditors?</h2>
+        <img src="images/icon_fujitami.jpg" alt="ふじたみ">
+        <p> モグリ。Gitの使い方に自信を持ちたい。 </p>
+      </div>
     </div>
 
 
